Auto BOM Calculation file UI changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,5 +103,7 @@
     <string name="total_bom">BOM SUM</string>
     <string name="total_bom_size">BOM Size  Kgs</string>
 
+    <string name="resin_value">100</string>
+
 
 </resources>
