Resin Info Updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,6 +186,8 @@
     <string name="flameretardent">What is Flame Retardent?</string>
     <string name="flameretardent1">How it Works?</string>
 
+    <string name="bullets">&#8226;</string>
+
 
 
 </resources>
